--- a/index.html
+++ b/index.html
@@ -5,12 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        #navbar{
+            width: 100%;
+            height: 70px;
+            border: 1px solid red;
+            color: antiquewhite;
+            background-color: rgb(3, 3, 46);
+        }
+    </style>
 </head>
 <body>
 
-    <h1>Let's start</h1>
-    <br><br><br>
-    <h3>Hi, Ajay</h3>
+    <div id="navbar">
+        <h1>Let's start</h1>
+    </div>
+
+    <div id="top_img"></div>
+ 
+  
     
 </body>
 </html>
