--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ajay Portfolio Website</title>
-    <link rel="stylesheet" href="css/swiper-bundle.min.css">
+    <!-- <link rel="stylesheet" href="css/swiper-bundle.min.css"> -->
     <link rel="stylesheet" href="css/style.css">
-    <!-- <link rel="stylesheet" href="css/ajay.css"> -->
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
  
     <link
@@ -477,7 +477,7 @@
             <ul>
               <li><a href="https://github.com/Ajay470"><i class="fa-brands fa-github"></i></a></li>
               <li><a href="https://www.linkedin.com/in/ajay-singh-shekhawat-074724117"><i class="fa-brands fa-linkedin-in"></i></a></li>
-              <!-- <li><a href="#"><i class="fa-brands fa-hackerrank"></i></a></li> -->
+           
             </ul>
           </div>
         </div>
@@ -488,7 +488,7 @@
 
 
     <!--=======External scripts=======-->
-    <script src="js/swiper-bundle.min.js"></script>
+  
     <script src="js/main.js"></script>
   </body>
 </html>
