--- a/index.html
+++ b/index.html
@@ -366,29 +366,33 @@
             <ul class="service-list">
               <li class="service-container">
                 <div class="service-card">
-                  <i class="fas fa-pencil-ruler"></i>
+                  <!-- <i class="fas fa-pencil-ruler"></i> -->
+                  <img src="/images/New folder/code.png" alt="">
                   <h3>1200+</h3>
                   <h3>Hours Of Coding</h3>
+                  <h3> -</h3>
                 </div>
               </li>
                <li class="service-container">
                 <div class="service-card">
-                  <i class="fas fa-pencil-ruler"></i>
+                  <img src="/images/New folder/dsa.png" alt="">
                   <h3>600+</h3>
                   <h3>Hours Of DSA</h3>
+                  <h3> -</h3>
                 </div>
               </li>
     
               <li class="service-container">
                 <div class="service-card">
-                  <i class="fas fa-pencil-ruler"></i>
+                  <img src="/images/New folder/project.png" alt="">
                   <h3>2+</h3>
                   <h3>Mini Projects</h3>
+                  <h3> -</h3>
                 </div>
               </li>
               <li class="service-container">
                 <div class="service-card">
-                  <i class="fas fa-pencil-ruler"></i>
+                  <img src="/images/New folder/powers.png" alt="">
                   <h3>6+</h3>
                   <h3>Months Of Power Skills</h3>
                 </div>
