--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <a href="#skills">Skills</a>
     <a href="#portfolio">My Project</a>
     <a href="#contact">Contact</a>
-    <a href="images/Ajay_resume.pdf" download="Resume" onclick="window.open( `https://drive.google.com/file/d/1ZFseA03tGWJ740M_mltYyX278fujsSiV/view?usp=share_link`, `_blank`)">Resume <i class="fas fa-download"></i></a>
+    <a href="images/Ajay_resume.pdf" download="Ajay-Singh-Resume" onclick="window.open( `https://drive.google.com/file/d/1ZFseA03tGWJ740M_mltYyX278fujsSiV/view?usp=share_link`, `_blank`)">Resume <i class="fas fa-download"></i></a>
 
   </div>
 </div>
