--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
   
        
-      <a href="images/Ajay_resume.pdf" download="Resume" onclick="window.open( `https://drive.google.com/file/d/1ZFseA03tGWJ740M_mltYyX278fujsSiV/view?usp=share_link`, `_blank`)" class="btn"> Download CV <i class="fas fa-download"></i></a>
+      <a href="images/Ajay_resume.pdf" download="Ajay-Singh-Resume" onclick="window.open( `https://drive.google.com/file/d/1ZFseA03tGWJ740M_mltYyX278fujsSiV/view?usp=share_link`, `_blank`)" class="btn"> Download CV <i class="fas fa-download"></i></a>
       </div>
     </div>
   </div>
