--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <a href="#skills">Skills</a>
     <a href="#portfolio">My Project</a>
     <a href="#contact">Contact</a>
-    <a href="images/Ajay_Singh_Resume.pdf" download="Ajay-Singh-Resume" onclick="window.open( `https://drive.google.com/file/d/1AlGcl_q50B9jIyQMOyxUwEQvsQdew4KB/view?usp=sharing`, `_blank`)">Resume <i class="fas fa-download"></i></a>
+    <a href="images/Ajay Singh_Resume.pdf" download="Ajay-Singh-Resume" onclick="window.open( `https://drive.google.com/file/d/1AlGcl_q50B9jIyQMOyxUwEQvsQdew4KB/view?usp=sharing`, `_blank`)">Resume <i class="fas fa-download"></i></a>
 
   </div>
 </div>
