--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
   
        
-      <a href="images/Ajay Singh_Resume.pdf" download="Ajay-Singh-Resume" onclick="window.open( `https://drive.google.com/file/d/1NMRUT_Sy9gac4D8GHsaZ_FYdQDAwIeo6/view?usp=share_link`, `_blank`)" class="btn"> Download CV <i class="fas fa-download"></i></a>
+      <a href="images/Ajay Singh_Resume.pdf" download="Ajay-Singh-Resume" onclick="window.open( `https://drive.google.com/file/d/1AlGcl_q50B9jIyQMOyxUwEQvsQdew4KB/view?usp=sharing`, `_blank`)" class="btn"> Download CV <i class="fas fa-download"></i></a>
       </div>
     </div>
   </div>
